--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.12.3",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.395.0",
+    "marked": "^12.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
